# ultimateMinecraft

./: .editorconfig  CMakeLists.txt  main.cpp
assets/: cube.frag  cube.vert
include/: camera.h  game.h  main.h  player.h  shader.h  texture.h
include/game/: game.h  perlin_noise.h  render.h  thread_pool.h
include/glad/: glad.c  glad.h
include/zlib/bull_shit_else/: bull_shit_else.7z
libs/: fmt.lib  fmtd.lib  glfw3.lib  zlibstatic.lib  zlibstaticd.lib
third_party_license/: cereal license.txt  zlib license.txt
